<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="4dp">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="bottom">
        <!-- Champion image -->
        <ImageView
            android:id="@+id/grid_item_image"
            android:contentDescription="@string/picture_desc"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="10dp">
        </ImageView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!-- Champion name -->
            <TextView
                android:id="@+id/grid_item_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@+id/label"
                android:textSize="20sp"/>
            <!-- Games played-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_games_played"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="@string/scroll_games"/>
                <TextView
                    android:id="@+id/tv_games_played_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:textSize="15sp"
                    android:text="##" />
                <!-- Spacer -->
                <TextView
                    android:layout_width="15dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="@string/win_ratio"/>
                <TextView
                    android:id="@+id/tv_grid_win_ratio_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:textSize="15sp"
                    android:text="##.##" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>