<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.garcia.alexander.oscar.lolsummonersearch.ChampionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blackHeavyOpaque"
        android:padding="10dp"
        android:orientation="vertical"
        android:gravity = "top">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="8dp"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/tv_season_champ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="season"/>
            <!-- Summoner Name -->
            <TextView
                android:id="@+id/tv_act_champ_summoner_name"
                android:text="@string/summoner_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </LinearLayout>

        <!-- Header -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingBottom="8dp">
            <ImageView
                android:id="@+id/iv_champion_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"/>
            <!-- Name and title -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="bottom">
                <TextView
                    android:id="@+id/tv_champion_name"
                    android:text="Champion Name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_champion_title"
                    android:text="Champion Title"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingBottom="8dp">
            <!-- Games & Value -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="Games: "/>
            <!-- Value -->
            <TextView
                android:id="@+id/tv_act_champ_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orange"
                android:textSize="20sp"
                android:text="@string/value_placeholder"/>
            <!--Spacer-->
            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content" />
            <!-- Won & Value -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="Won: "/>
            <!-- Value -->
            <TextView
                android:id="@+id/tv_act_champ_games_won"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orange"
                android:textSize="20sp"
                android:text="@string/value_placeholder"/>
            <!--Spacer-->
            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content" />
            <!-- Lost & Value -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="Lost: "/>
            <!-- Value -->
            <TextView
                android:id="@+id/tv_act_champ_games_lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orange"
                android:textSize="20sp"
                android:text="@string/value_placeholder"/>
        </LinearLayout>
        <!-- Win Ratio -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="Win Ratio: "/>
            <TextView
                android:id="@+id/tv_act_champs_win_ratio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/orange"
                android:text="@string/value_placeholder"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_act_champ_per_game_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/per_game_averages"
            android:paddingTop="15dp"
            android:paddingBottom="8dp"/>

        <!-- Per game average values -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start">
            <!-- Average kills -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/average_kills"/>
                <TextView
                    android:id="@+id/tv_average_kills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:textSize="20sp"
                    android:text="@string/value_placeholder"/>
            </LinearLayout>
            <!-- Average deaths -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/average_deaths"/>
                <TextView
                    android:id="@+id/tv_average_deaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:textSize="20sp"
                    android:text="@string/value_placeholder"/>
            </LinearLayout>
            <!-- Average assists -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/average_assists"/>
                <TextView
                    android:id="@+id/tv_average_assists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:textSize="20sp"
                    android:text="@string/value_placeholder"/>
            </LinearLayout>
            <!-- Average minions -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/average_minions"/>
                <TextView
                    android:id="@+id/tv_average_minions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:textSize="20sp"
                    android:text="@string/value_placeholder"/>
            </LinearLayout>
            <!-- Average double kills -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/average_double_kills"/>
                <TextView
                    android:id="@+id/tv_average_double_kills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:textSize="20sp"
                    android:text="@string/value_placeholder"/>
            </LinearLayout>
            <!-- Average triple kills -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/average_triple_kills"/>
                <TextView
                    android:id="@+id/tv_average_triple_kills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:textSize="20sp"
                    android:text="@string/value_placeholder"/>
            </LinearLayout>
            <!-- Average Quadra kills -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/average_quadra_kills"/>
                <TextView
                    android:id="@+id/tv_average_quadra_kills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:textSize="20sp"
                    android:text="@string/value_placeholder"/>
            </LinearLayout>
            <!-- Average penta kills -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/average_penta_kills"/>
                <TextView
                    android:id="@+id/tv_average_penta_kills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:textSize="20sp"
                    android:text="@string/value_placeholder"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>